Frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: issue-microservices
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
